# PostgreSQL_SQLite_db

./: .gitignore  First.txt  Hi.txt  README.md  Second.txt  main.py  pyproject.toml  requirements.txt
app/: config.py  crud.py  main.py  models.py  routes.py  schemas.py
bitcoin/: database.py  main.py  schemas.py  services.py
fastapi-postgres-docker/: database.py  main.py  schemas.py  services.py
